fix content area max width and hidden the overflow-x

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1227,10 +1227,20 @@ body {
   font-size: 13px;
   color: #676a6c;
   height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 html {
   height: 100%;
+  width: 100%;
+}
+
+#page-container {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  overflow-x: hidden;
 }
 
 .clear {
@@ -2018,7 +2028,7 @@ body {
   &.landing-page {
     color: #676a6c;
     font-family: 'Open Sans', helvetica, arial, sans-serif;
-    background-color: #fff;
+    background-color: rgba($color: #f4f4f4, $alpha: 0.4);
   }
 }
 .no-select {
@@ -2587,6 +2597,7 @@ iframe {
   }
   .container-fluid {
     padding: 0;
+    overflow: hidden;
   }
   .carousel { 
   }
@@ -2675,6 +2686,7 @@ iframe {
     margin-top: 40px;
   }
   .features {
+    background-color: #fff;
     small {
       color: #3385FF;
     }
